<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Head Title -->
    <string name="xiaomiparts_title">Xiaomi Parts</string>
    <string name="xiaomiparts_settings_summary">Device Specific Customizations</string>

    <!-- Category Title -->
    <string name="display_title">Display</string>
    <string name="vibration_title">Vibration Controller</string>
    <string name="torch_title">Torch</string>
    <string name="audio_title">Audio</string>

    <!-- Audio amplification -->
    <string name="headphone_gain">Headphone gain</string>
    <string name="microphone_gain">Microphone gain</string>

    <!-- Torch -->
    <string name="torch_brightness_title">Brightness</string>

    <!-- FPS Info -->
    <string name="fps_info_title">FPS Info Overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>

    <!-- Backlight Dimmer -->
    <string name="backlight_dimmer">Backlight Dimmer</string>
    <string name="backlight_summary">Dim the display to the maximum value</string>

    <!-- Vibrator -->
    <string name="vibration_strength_title">Strength</string>

    <!-- kcal -->
    <string name="device_kcal_title">Display Calibration</string>
    <string name="device_kcal_summary">Display color calibration using KCAL</string>
    <string name="advanced_settings_kcal">Display Color Calibration</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>

    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale Display</string>

    <string name="presets_dialog_title">Select Preset</string>
    <!-- Presets -->
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
    <string name="preset_burn_in">Burn in Shit</string>

    <!-- Dirac settings -->
    <string name="dirac_title">Mi Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>

    <!-- Ambient gesture haptic feedback -->
    <string name="ambient_gesture_haptic_feedback">Haptic feedback</string>
    <string name="ambient_gesture_haptic_feedback_summary">Vibrate when a Ambient gesture is detected</string>

    <!-- Ambient Display -->
    <string name="ambient_display_enable_title">Ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>

    <!-- Doze sensor -->
    <string name="tilt_sensor_title">Tilt sensor</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="proximity_sensor_title">Proximity sensor</string>

    <!-- Hand wave gesture -->
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
    <string name="hand_wave_gesture_flat_title">Detect orientation</string>
    <string name="hand_wave_gesture_flat_summary">Pulse only if the phone is lying face up on a flat surface</string>

    <!-- Pick-up gesture -->
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>

    <!-- Pocket gesture -->
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <!-- Proximity wake -->
    <string name="proximity_wake_title">Proximity wake</string>
    <string name="proximity_wake_enable_title">Proximity wake</string>
    <string name="proximity_wake_enable_summary">Wake device on hand wave</string>

    <!-- menu -->
    <string name="kcal_presets">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>

    <!-- Label for feature switch  -->
    <string name="switch_bar_on">On</string>

    <!-- Label for feature switch -->
    <string name="switch_bar_off">Off</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
</resources>
