<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_title">

        <com.xiaomi.parts.preferences.CustomSeekBarPreference
            android:defaultValue="2"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain"/>

        <com.xiaomi.parts.preferences.CustomSeekBarPreference
            android:defaultValue="0"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_mic"
            android:title="@string/microphone_gain"/>

        <com.xiaomi.parts.preferences.SecureSettingSwitchPreference
            android:defaultValue="false"
            android:key="dirac_enabled"
            android:summary="@string/dirac_summary"
            android:title="@string/dirac_title"
            android:icon="@drawable/ic_dirac" />

        <com.xiaomi.parts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_headset_pref_entries"
            android:entryValues="@array/dirac_headset_pref_values"
            android:key="dirac_headset_pref"
            android:summary="%s"
            android:title="@string/dirac_headset_title"
            android:icon="@drawable/ic_headphones" />

        <com.xiaomi.parts.preferences.SecureSettingListPreference
            android:defaultValue="0,0,0,0,0,0,0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_preset_pref_entries"
            android:entryValues="@array/dirac_preset_pref_values"
            android:key="dirac_preset_pref"
            android:summary="%s"
            android:title="@string/dirac_preset_title"
            android:icon="@drawable/ic_preset" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <com.xiaomi.parts.preferences.SecureSettingSwitchPreference
            android:key="backlight_dimmer"
            android:icon="@drawable/ic_backlight"
            android:title="@string/backlight_dimmer"
            android:summary="@string/backlight_summary" />

        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/device_kcal_summary" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.xiaomi.parts.kcal.KCalSettingsActivity"
                android:targetPackage="com.xiaomi.parts.kcal"/>
        </Preference>

        <PreferenceScreen
            android:key="ambient_display_gestures"
            android:fragment="com.xiaomi.parts.ambient.AmbientGesturePreferenceActivity"
            android:summary="@string/ambient_display_gestures_summary"
            android:icon="@drawable/ic_doze"
            android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_title">

        <com.xiaomi.parts.preferences.VibrationSeekBarPreference
            android:defaultValue="80"
            android:key="vibration_strength"
            android:max="100"
            android:title="@string/vibration_strength_title"
            android:icon="@drawable/ic_vibrate"
            app:min="1"
            app:units="%"/>
    </PreferenceCategory>

    <!--PreferenceCategory
        android:key="torch"
        android:title="@string/torch_title">
        <com.xiaomi.parts.preferences.CustomSeekBarPreference
            android:defaultValue="100"
            android:key="torch_brightness"
            android:max="255"
            app:min="1"
            android:icon="@drawable/ic_torch"
            android:title="@string/torch_brightness_title" />
    </PreferenceCategory-->
</PreferenceScreen>
